Fixed Project Alignment & Flower Header

--- a/style/index.css
+++ b/style/index.css
@@ -44,17 +44,18 @@ h1 {
     color: #35313e;
 }
 
+nav {
+    padding-bottom: 3%;
+}
+
 .links {
     display: flex;
-    /* align-items: center; */
     justify-content: center;
-    padding-bottom: 3%;
 }
 
 .links a {
     padding: 1%;
     background-color: #ffc9f7;
-    /* border: 1px solid #a690e8; */
     width: 6%;
     display: block;
     text-overflow: wrap;
@@ -74,7 +75,6 @@ nav a:hover {
 .bio {
     display: flex;
     flex-direction: column;
-    /* justify-items: space-around; */
     overflow: hidden;
     align-items: center;
     margin-bottom: 4%;;
@@ -101,8 +101,9 @@ nav a:hover {
 }
 
 .bioImage img {
-    margin-top: -35rem; 
-    margin-bottom: -35rem;
+    overflow: hidden;
+    margin-top: -50%; 
+    margin-bottom: -50%;
     width: 90%; 
 }
 
@@ -110,7 +111,6 @@ nav a:hover {
 
 #projects {
     display: flex;
-    /* flex-wrap: wrap; */
     flex-direction: column;
     align-items: center;
     margin-bottom: 10%;
@@ -129,24 +129,22 @@ nav a:hover {
 }
 
 .projectSide {
-    display: flex;
-    align-items: center;
     margin: 2%;
     margin-left: 5%;
     width: 50%;;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
 }
 
-.projectSide p {
+.projectText p {
     font-size: 1.15rem;
     width: 200px;
     word-wrap: break-word;
-    margin: 5%;
 }
 
 .projectText {
+    margin: 5%;
     display: flex;
     /* flex-wrap: wrap; */
     flex-direction: column;
@@ -155,7 +153,7 @@ nav a:hover {
 
 #seeMore {
     margin-top: 20%;
-    width: 50%;
+    width: 60%;
 }
 
 #seeMore a {
